fix menu item underline on mobile

--- a/app/sass/my.sass
+++ b/app/sass/my.sass
@@ -43,6 +43,8 @@ iframe
     color: $primary
     border-color: $primary
 
+.show .navbar-nav .nav-link, .collapsing .navbar-nav .nav-link
+    border-color: transparent
 
 .chips
     display: flex
